# rl-router

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  LAUNCH_DRAFT.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: claude_code_openrouter_qwen.md  openai_anthropic_fallback.py
src/rl_router/: __init__.py  router.py  simulate.py
src/rl_router/providers/: __init__.py  claude_cli.py  nvidia_build.py
tests/: test_claude_cli_provider.py  test_nvidia_build_provider.py  test_router.py
tests/integration/: test_nvidia_real.py
